src/test/deca/context/invalid/inheritance/override_wrong_return_type_custom.deca
// Description :
// redéfinition d'une méthode avec mauvais type de retour
//
// Resultats :
// Erreur contextuelle
// Ligne 10 : type de retour incompatible avec la méthode de la classe parent

class Base {
    int foo() { return 1; }
}

class Child extends Base {
    float foo() { return 1.0; } // doit échouer
}
